[tool.poetry]
name = "excel-dsl"
version = "0.1.0"
description = ""
authors = ["3gee <huangbaochenwo@live.com>"]
readme = "README.md"
packages = [{include = "excel_dsl"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
